--- a/C#101/Pratikler/hazirMetotlarString/.vscode/launch.json
+++ b/C#101/Pratikler/hazirMetotlarString/.vscode/launch.json
@@ -1,7 +1,7 @@
 {
-    // Olası öznitelikler hakkında bilgi edinmek için IntelliSense kullanın.
-    // Mevcut özniteliklerin açıklamalarını görüntülemek için üzerine gelin.
-    // Daha fazla bilgi için şu adresi ziyaret edin: https://go.microsoft.com/fwlink/?linkid=830387
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
@@ -9,7 +9,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/net6.0/hataYonetimi.dll",
+            "program": "${workspaceFolder}/bin/Debug/net6.0/hazirMetotlarString.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
             "console": "integratedTerminal",
